--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fsanitize-recover=address")
 
 add_executable(game
     src/main.cpp
+    src/freakingAudio.cpp
     src/obstacle.cpp
     src/player.cpp
     src/spawner.cpp
